[metadata]
name = bandit-high-entropy-string
summary = A bandit plugin to check for strings that have high entropy (possible hardcoded secrets).
description-file = README.md
author = Ryan Lane
author-email = rlane@lyft.com
version = 1.0
license = Apache-2

[entry_points]
bandit.plugins =
    high_entropy_assign = bandit_plugins.high_entropy_string:high_entropy_assign
    high_entropy_funcarg = bandit_plugins.high_entropy_string:high_entropy_funcarg
    high_entropy_funcdef = bandit_plugins.high_entropy_string:high_entropy_funcdef
    high_entropy_dict = bandit_plugins.high_entropy_string:high_entropy_dict

[extras]
  zxcvbn =
    zxcvbn==1.0
