[flake8]
# The jenkins violations plugin can read the pylint format.
format = pylint
max-line-length = 120

# .svn,CVS,.bzr,.hg,.git,__pycache__:
#   default excludes
# venv/:
#  third party libraries are all stored in venv - so we don't want to
#  check them for style issues.
exclude = .git,__pycache__,venv,tests/,.ropeproject,examples

[pep8]
max-line-length = 120

[metadata]
name = bandit-high-entropy-string
summary = A bandit plugin to check for strings that have high entropy (possible hardcoded secrets).
description-file = README.md
author = Ryan Lane
author-email = rlane@lyft.com
license = Apache-2

[files]
packages =
  bandit_plugins

[entry_points]
bandit.plugins =
    high_entropy_assign = bandit_plugins.bandit_high_entropy_string:high_entropy_assign
    high_entropy_funcarg = bandit_plugins.bandit_high_entropy_string:high_entropy_funcarg
    high_entropy_funcdef = bandit_plugins.bandit_high_entropy_string:high_entropy_funcdef
    high_entropy_iter = bandit_plugins.bandit_high_entropy_string:high_entropy_iter
